@@ -81,7 +81,7 @@ else:
                                             'python-subunit',
                                            ]},
                 )
- 
+
 
 
 class custom_test(test):
@@ -179,6 +179,7 @@ setup(
         "Programming Language :: Python :: 2.4",
         "Programming Language :: Python :: 2.5",
         "Programming Language :: Python :: 2.6",
+        "Programming Language :: Python :: 2.7",
         "Programming Language :: Python :: 3",
         "Programming Language :: Python :: 3.1",
         "Topic :: Software Development :: Libraries :: Python Modules",
